[tool.pylint.format]
max-line-length = 100

[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "7.0"
cards = {path = "/usr/local/bin/cards_proj"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
